Restaurant SIgnup Done, Implemented swagger for one endpoint
